[gd_scene load_steps=23 format=3 uid="uid://cr4sivgv6bj2j"]

[ext_resource type="Script" path="res://Assets/Scripts/owl_player.gd" id="1_4fjp1"]
[ext_resource type="Texture2D" uid="uid://cwpnfi438tfqb" path="res://Assets/Characters/simpleBird-Sheet.png" id="1_wbo4f"]
[ext_resource type="Texture2D" uid="uid://ei4qineqeec8" path="res://Assets/Neko Cafe Asset Pack/neko-cafe-food-separate/pie.png" id="3_vwtrj"]
[ext_resource type="Texture2D" uid="uid://cwthkfbqw3tyj" path="res://Assets/Neko Cafe Asset Pack/neko-cafe-food-separate/square.png" id="4_isyf8"]
[ext_resource type="Texture2D" uid="uid://bmt30gsyiaci5" path="res://Assets/Neko Cafe Asset Pack/neko-cafe-food-separate/croissant.png" id="5_1b5j7"]
[ext_resource type="Texture2D" uid="uid://bjrpbnupj3qxb" path="res://Assets/Neko Cafe Asset Pack/neko-cafe-food-separate/tiramisu.png" id="6_uypkl"]
[ext_resource type="Texture2D" uid="uid://cv25um8ijg026" path="res://Assets/Neko Cafe Asset Pack/neko-cafe-food-separate/pastry.png" id="7_oxsrn"]
[ext_resource type="Texture2D" uid="uid://x8fbjkka1jsw" path="res://Assets/Neko Cafe Asset Pack/neko-cafe-food-separate/coffee.png" id="8_deq4r"]
[ext_resource type="Texture2D" uid="uid://2ibqx46sc2tj" path="res://Assets/Items/bill.png" id="9_rao6u"]
[ext_resource type="Texture2D" uid="uid://dh68ufj15xian" path="res://Assets/Items/cash_wad.png" id="9_wxsy3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a2pfr"]
atlas = ExtResource("1_wbo4f")
region = Rect2(0, 300, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xbn6"]
atlas = ExtResource("1_wbo4f")
region = Rect2(50, 300, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgpoc"]
atlas = ExtResource("1_wbo4f")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_dm5hp"]
atlas = ExtResource("1_wbo4f")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bml5"]
atlas = ExtResource("1_wbo4f")
region = Rect2(0, 100, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ug1k"]
atlas = ExtResource("1_wbo4f")
region = Rect2(0, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_bykqx"]
atlas = ExtResource("1_wbo4f")
region = Rect2(50, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_munm0"]
atlas = ExtResource("1_wbo4f")
region = Rect2(100, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqbbd"]
atlas = ExtResource("1_wbo4f")
region = Rect2(150, 50, 50, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_m1jq5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2pfr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xbn6")
}],
"loop": true,
"name": &"doze_off",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgpoc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dm5hp")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bml5")
}],
"loop": true,
"name": &"sit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ug1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bykqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_munm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqbbd")
}],
"loop": true,
"name": &"sprint",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ug1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bykqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_munm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqbbd")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1u3lk"]
radius = 4.0
height = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_u36om"]
radius = 24.331

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
position = Vector2(2.08165e-12, 2.08165e-12)
script = ExtResource("1_4fjp1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
texture_filter = 1
position = Vector2(-2.08165e-12, -2.08165e-12)
sprite_frames = SubResource("SpriteFrames_m1jq5")
animation = &"idle"
autoplay = "idle"
offset = Vector2(2.08165e-12, -25)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.08165e-12, -4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_1u3lk")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-2.08165e-12, 0)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(7.10543e-15, -10)
rotation = 1.5708
shape = SubResource("CircleShape2D_u36om")

[node name="DozeTimer" type="Timer" parent="."]
wait_time = 30.0

[node name="StaminaTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="Pie" type="Sprite2D" parent="."]
visible = false
y_sort_enabled = true
texture_filter = 1
position = Vector2(9, -2.08165e-12)
texture = ExtResource("3_vwtrj")
centered = false
offset = Vector2(-8, -16)

[node name="Square" type="Sprite2D" parent="."]
visible = false
y_sort_enabled = true
position = Vector2(9, 2.08165e-12)
texture = ExtResource("4_isyf8")
centered = false
offset = Vector2(-8, -16)

[node name="Croissant" type="Sprite2D" parent="."]
visible = false
y_sort_enabled = true
position = Vector2(9, 2.08165e-12)
texture = ExtResource("5_1b5j7")
centered = false
offset = Vector2(-8, -16)

[node name="Tiramisu" type="Sprite2D" parent="."]
visible = false
y_sort_enabled = true
position = Vector2(9, 2.08165e-12)
texture = ExtResource("6_uypkl")
centered = false
offset = Vector2(-8, -16)

[node name="Pastry" type="Sprite2D" parent="."]
visible = false
y_sort_enabled = true
position = Vector2(9, 2.08165e-12)
texture = ExtResource("7_oxsrn")
centered = false
offset = Vector2(-8, -16)

[node name="Coffee" type="Sprite2D" parent="."]
visible = false
y_sort_enabled = true
position = Vector2(9, 2.08165e-12)
texture = ExtResource("8_deq4r")
centered = false
offset = Vector2(-8, -16)

[node name="Bill" type="Sprite2D" parent="."]
visible = false
y_sort_enabled = true
texture_filter = 1
position = Vector2(9, 2.08165e-12)
rotation = 0.326377
scale = Vector2(1, 1)
texture = ExtResource("9_rao6u")
centered = false
offset = Vector2(-8, -16)

[node name="Cash" type="Sprite2D" parent="."]
visible = false
y_sort_enabled = true
position = Vector2(9, 2.08165e-12)
texture = ExtResource("9_wxsy3")
centered = false
offset = Vector2(-8, -16)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="DozeTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="StaminaTimer" to="." method="_on_stamina_timer_timeout"]
[connection signal="timeout" from="StaminaTimer" to="." method="_on_timer_timeout"]
